[gd_scene load_steps=4 format=3 uid="uid://c5fivptia1eum"]

[ext_resource type="Script" path="res://scenes/dialogs/settings_dialog/settings_dialog.gd" id="1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_o8b16"]

[sub_resource type="StyleBoxEmpty" id="12"]

[node name="SettingsDialog" type="PanelContainer"]
offset_right = 592.0
offset_bottom = 460.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "DIALOG_SETTINGS_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ThemeContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
layout_mode = 2
theme_type_variation = &"LabelSubtitle"
text = "SETTING_THEME"

[node name="Dark" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../CheckUpdates")
mouse_filter = 1
button_group = SubResource("ButtonGroup_o8b16")
text = "SETTING_THEME_DARK"
metadata/theme_name = "dark"

[node name="White" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/ThemeContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../../LangContainer/LangAuto")
mouse_filter = 1
button_group = SubResource("ButtonGroup_o8b16")
text = "SETTING_THEME_WHITE"
metadata/theme_name = "white"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LangContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer/LangContainer"]
layout_mode = 2
theme_type_variation = &"LabelSubtitle"
text = "SETTING_LANG"

[node name="LangAuto" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer/LangContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../ThemeContainer/White")
mouse_filter = 1
text = "SETTING_LANG_AUTO"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CheckUpdates" type="CheckBox" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SETTING_CHECK_UPDATES"

[node name="Control" type="Control" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelVersion" type="Label" parent="VBoxContainer/ScrollContainer/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelSubtitle"
text = "v1.x.x"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("12")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
focus_neighbor_top = NodePath("../../ScrollContainer/SettingsContainer/CheckUpdates")
text = "BTN_CLOSE"

[connection signal="toggled" from="VBoxContainer/ScrollContainer/SettingsContainer/CheckUpdates" to="." method="_on_check_updates_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CloseButton" to="." method="_on_close_button_pressed"]
